samples/_failures_safe/1761271525_fdb1ae_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_23af13ca.c: In function ‘print_token’:
./samples/SAFE/__tmp_23af13ca.c:167:12: error: expected expression at end of input
  167 |            token->line,
      |            ^~~~~
./samples/SAFE/__tmp_23af13ca.c:167:12: error: expected declaration or statement at end of input
